force-app/main/default/objects/BrillioFC__Field_Layout_Detail__c/BrillioFC__Field_Layout_Detail__c.object-meta.xml
<CustomObject>
    <label>Force Clinic Field Layout Detail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Field Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Force Clinic Field Layout Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>