force-app/main/default/objects/BrillioFC__Field_Layout_Detail__c/fields/BrillioFC__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Field_Name__c</fullName>
    <label>Field Name</label>
    <referenceTo>BrillioFC__Field_Detail__c</referenceTo>
    <relationshipLabel>Force Clinic Field Layout Details</relationshipLabel>
    <relationshipName>Field_Layout_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>