force-app/main/default/objects/BrillioFC__Field_Layout_Detail__c/fields/BrillioFC__Layout_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Layout_Name__c</fullName>
    <label>Layout Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>