force-app/main/default/objects/BrillioFC__Field_Layout_Detail__c/fields/BrillioFC__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Object_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object Name</label>
    <referenceTo>BrillioFC__Object_Detail__c</referenceTo>
    <relationshipLabel>Force Clinic Field Layout Details</relationshipLabel>
    <relationshipName>Field_Layout_Details</relationshipName>
    <type>Lookup</type>
</CustomField>